[package]
name = "tiger-claw"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_derive = "4.5.32"
reqwest = {version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.69.0"
chrono = "0.4.40"
toml = "0.8.12"
log = "0.4.27"

[dev-dependencies]
tempfile = "3.10.1"
mockito = "1.3.0"

